fabrik/internal/engine/testdata/select_target_err.txt
provider:select only goes on interface types.
-- go.mod --
module app

go 1.26
-- main.go --
package main

import "os"

func main() { os.Exit(run()) }
-- web/web.go --
package web

import "net/http"

//fabrik:provider:select some.key
func OnFunc() {}

type NotIface struct{}

//fabrik:provider:select other.key
type Alias = NotIface

//fabrik:http GET /
func Index(w http.ResponseWriter, r *http.Request) {}
-- want/diags --
error: web/web.go:5:1: //fabrik:provider:select must be on an interface type declaration
error: web/web.go:10:1: //fabrik:provider:select must be on an interface type (Alias is not an interface)
  help: the selection chooses between implementations of an interface
